# csc299-project

./: Makefile  README.md  SUMMARY.md  final_project_store.json  main.py   model.py  services.py  storage.py  tasks5_store.json
.github/workflows/: python-tests.yml
Final Project/: .gitignore  README.md
Final Project/src/tasks_app/: __init__.py  model.py
Final Project/tests/: test_cli.py
final_project/: README.md  main.py  pyproject.toml  video.txt
final_project/Final Project/: README.md  main.py
final_project/Final Project/src/tasks_app/: __main__.py  cli.py  storage.py
final_project/Final Project/tests/: test_storage.py
final_project/src/tasks_app/: __main__.py  cli.py
final_project/tests/: conftest.py  test_priority.py
scripts/: demo.sh
specs/001-build-tasks-manager/: plan.md  spec.md  tasks.md
task1/: README.md  services.py
task2/: README.md  main.py  model.py  services.py  storage.py  tasks.json
tasks3/: main.py  pyproject.toml
tasks3/src/tasks3/: __init__.py  model.py  services.py  storage.py
tasks3/tests/: test_inc.py  test_model.py  test_services.py
tasks4/: README.md  pyproject.toml
tasks4/src/tasks4/: __init__.py  __main__.py  client.py
tasks4/tests/: test_client.py
tasks5/: README.md  setup.py
tasks5/src/tasks5.egg-info/: PKG-INFO  SOURCES.txt
tasks5/src/tasks_manager/: __init__.py  __main__.py  cli.py  model.py  storage.py
tasks5/tests/: test_cli.py  test_model.py  test_storage.py
tasks_final/: .gitignore
tasks_final/src/tasks_app/: storage.py
tasks_final/tests/: test_model.py
