[project]
name = "tasks4"
version = "0.1.0"
description = "Small experiment: summarize paragraph tasks via OpenAI Chat Completions API"
readme = "README.md"
authors = [
    { name = "ale24-vibe", email = "ale24@depaul.edu" }
]
requires-python = ">=3.14"
dependencies = ["openai>=1.0.0"]

[project.scripts]
tasks4 = "tasks4:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
